tests/data/specs/invalid/context_cycle_3.rflx
with Context_Cycle_1;

package Context_Cycle_3 is

end Context_Cycle_3;
